# Kalshi_Prediction_Soccer

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: coding.md  patterns.md
docker/: init.sql
docs/: MMPP_v5_Architecture.md  MMPP_v5_Complete.md  MMPP_v5_Complete_Roadmap.md  MMPP_v5_Complete_architecture.md  architecture.md  goalserve_datafeed.md  migration_kalshi_live_data.md  sprint_0_decomposition.md  sprint_1_decomposition.md  sprint_2_decomposition.md  sprint_3_decomposition.md  sprint_phase4_5_6_decomposition.md  sprint_run_match.md  sprint_s2_migration_decomposition.md  sprint_s3_migration_decomposition.md  v5_migration_sprint1.md  v5_migration_sprint2.md  v5_migration_sprint3.md
migrations/: 004_execution_tables.sql
scripts/: analyze_bias.py  analyze_drift.py  analyze_goal_adjustment_curve.py  analyze_inplay_accuracy.py  analyze_latency.py  analyze_non_goal_events.py  analyze_replay.py  analyze_spike_reversals.py  analyze_spreads.py  analyze_structural_edge.py  backfill_p_kalshi.py  backtest_all_matches.py  backtest_full_pipeline.py  backtest_multi_match.py  calibrate_sigma_omega.py  measure_latency.py  optimize_updater_params.py  plot_replay.py  record_batch.py  record_match.py  run_phase1.py  run_phase1_mle.py  run_phase2.py  run_phase3.py  run_tick_replay.py  simulate_match.py  simulate_match_full.py  sprint_minus_1.py  test_cross_source_mapper.py  validate_cross_source.py  watch_match.py
tests/: conftest.py  test_delta_indexing.py  test_math_core.py  test_types.py  validate_phase2.py
(+117 files in other folders)
