[project]
name = "fkt-v4"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "structlog>=24.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "numpy>=1.26",
    "numba>=0.59",
    "torch>=2.1",
    "xgboost>=2.0",
    "scipy>=1.12",
    "websockets>=12.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
addopts = "-m 'not slow'"
asyncio_mode = "auto"
